Bug 80938 - view not editable
Summary: view not editable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.3.0.1 rc
Hardware: Other All
: medium blocker
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0.0.beta2 target:4.3.5
Keywords: bibisected, bisected, regression
: 83776 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-05 07:55 UTC by Dominik
Modified: 2015-12-17 08:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
example database (3.33 KB, application/vnd.oasis.opendocument.database)
2014-07-05 17:37 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik 2014-07-05 07:55:01 UTC
neither via edit nor via edit in SQL view it's possible to edit (or even view) the statement of an existing view.

reproduce:
create a table with 1 column
create a view that shows that 1 colum
after saving, try to reopen the edit from for the view

reproducible: always

seen at least in 4.3.0.2 and 4.4.0.0
Comment 1 Terrence Enger 2014-07-05 17:37:38 UTC
Created attachment 102306 [details]
example database

I observe:

(A) with embedded hsqldb (try1_hsqldb.odb attached):

    (1) "Edit in SQL view..." on the view displays the expected
        window, but the pane for the SQL statement is entirely empty.
        This pane should show a sql SELECT statement.

    (2) "Edit" on the view displays the Design View window, but the
        tables pane is empty and the grid of columns selected into the
        query is empty.  The tables pane should show table "example1"
        and the grid should show two fields selected: "number" and
        "words".

(B) with embedded firebird:

    (1) There is no menu option "Edit it SQL view..." in the pop-up
        menu for the view.

    (2) "Edit" on the view displays a window like "Create Table in
        Design View", i.e. grid of fields, the columns being "Field
        Name", "Field Type", and "Description".  All fields in the
        grid are protected.


These observations are from master commit dc795cb, fetched 2014-07-02
2357 UTC, configured:
    --enable-option-checking=fatal
    --enable-dbgutil
    --enable-crashdump
    --without-system-postgresql
    --without-myspell-dicts
    --with-extra-buildid
    --without-doxygen
    --with-external-tar=/home/terry/lo_hacking/git/src
built and running on debian-wheezy 64-bit.
Comment 2 Terrence Enger 2014-07-09 20:24:52 UTC
Correcting comment 1:  The master version that I fetched on 2014-07-02 is 397362d.
Comment 3 Terrence Enger 2014-07-14 17:52:01 UTC
Bibisect tells me:

    ...
        source-hash-c84f0dae40b6f3e64a265efcc76b1757edbdbf45
        ....

and `git bisect log`:

    # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
    # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
    git bisect start 'latest' 'oldest'
    # good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
    git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
    # good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
    git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
    # bad: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
    git bisect bad a900e72b6357882284c5955bdf939bf14269f5fb
    # good: [e1d0365cd2b073a859f59ad0a4584385a66dc611] source-hash-2eea96c702a44ab009743b0d22ef639127f0b57b
    git bisect good e1d0365cd2b073a859f59ad0a4584385a66dc611
    # skip: [8f55938c891ee3e4c252b193dba9419f130537bc] source-hash-93f3f72d18e551c8edd6a010cb78d9cbe404f8ef
    git bisect skip 8f55938c891ee3e4c252b193dba9419f130537bc
    # good: [7518fcaf863962bf4f6f3cdf84f6e42f0f59225f] source-hash-ab1f5eab4830f00dbbd7c883b98b59975ecd3bb1
    git bisect good 7518fcaf863962bf4f6f3cdf84f6e42f0f59225f
    # good: [56a3b3c781fc2eb55f46641d89a866a91119a8a3] source-hash-21e6fd2b2dfdb806db320f699e434e6f2351a7b6
    git bisect good 56a3b3c781fc2eb55f46641d89a866a91119a8a3
    # bad: [0b79394752f7ecbab6ab4ecedbfab8551c6e9fbd] source-hash-381613916d42a1e18e2824b5d41028dcfe19659a
    git bisect bad 0b79394752f7ecbab6ab4ecedbfab8551c6e9fbd
    # bad: [5874347fb1093d87d810e030af88327f0dc26a81] source-hash-a3f0803059cd22ddf8590db992183008dedd0fdb
    git bisect bad 5874347fb1093d87d810e030af88327f0dc26a81
    # bad: [a03a074d7d24b285022244e1939b1abbedc76d1e] source-hash-c84f0dae40b6f3e64a265efcc76b1757edbdbf45
    git bisect bad a03a074d7d24b285022244e1939b1abbedc76d1e
Comment 4 Helmut Lohkamp 2014-08-28 15:25:46 UTC
same problem faced here today. Both windows of the views are empty (Edit & SQL).
But running the view it shows the expected data. Also the report using the view(s) run correct. I'd need to change some things in the view but can't right now.
Comment 5 Robert Großkopf 2014-09-11 19:47:12 UTC
*** Bug 83776 has been marked as a duplicate of this bug. ***
Comment 6 Luzius Auer 2014-10-16 10:32:26 UTC
Why is this regression ignored in several recent releases 4.3 and 4.4 ?
It prevents me from upgrading from 4.2.x to V 4.3, as I often have to modify existing views in databases I use to manage a music school.
Therefore I consider this as a blocker, at least for me.
Comment 7 Andras Timar 2014-11-28 15:00:28 UTC
bisected, first bad commit is:
commit d60392fb5b387175dbd2e575848993c02c56922f
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Mar 6 12:05:24 2014 +0000

    coverity#706316 help out coverity re tortured logic
    
    Change-Id: I6d6a948fdac4442c69972316275349fe73b9e741
Comment 8 Commit Notification 2014-12-01 14:08:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6269b62b525ec22471db56015ac2daed813ec5ff

Resolves: fdo#80938 fix SQL view to be editable

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-12-01 14:10:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=14b8adadb475aa15a0b9e96b446ec74cec4e5f99&h=libreoffice-4-4

Resolves: fdo#80938 fix SQL view to be editable

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-12-02 13:33:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11b4de26833558b482e28619afe09c2c0acd7bb2&h=libreoffice-4-3

Resolves: fdo#80938 fix SQL view to be editable

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-12-04 14:03:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=efaefdf1ca3b03a1db0a96c8a705595009263665&h=libreoffice-4-3-5

Resolves: fdo#80938 fix SQL view to be editable

It will be available in 4.3.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Luzius Auer 2015-04-09 17:10:29 UTC
View again not editable in Version: 4.3.6.2
Build ID: 4.3.6.2-7.fc21
very annoying as this is the "official, yum updated version" in F20
Comment 13 Robert Großkopf 2015-04-09 19:30:47 UTC
(In reply to Luzius Auer from comment #12)
> View again not editable in Version: 4.3.6.2
> Build ID: 4.3.6.2-7.fc21
> very annoying as this is the "official, yum updated version" in F20

Have tested with Version: 4.3.6.2
Build-ID: d50a87b2e514536ed401c18000dad4660b6a169e
OpenSUSE 13.2 64bit rpm. Could not confirm view isn't editable.

Don't know where you get a build with such a short number. Is it a original build of LO?
Comment 14 Luzius Auer 2015-04-10 16:42:46 UTC
(In reply to robert from comment #13)
> (In reply to Luzius Auer from comment #12)
> Have tested with Version: 4.3.6.2
> Build-ID: d50a87b2e514536ed401c18000dad4660b6a169e
> OpenSUSE 13.2 64bit rpm. Could not confirm view isn't editable.
> 
> Don't know where you get a build with such a short number. Is it a original
> build of LO?

Yes it is the official version from the F21 repository:
Today I removed with 'yum remove libreoffice*' and the modules with apper.

After 'yum install libreoffice' it is still not possible to edit views.
Fedora21 64bits
LO Version: 4.3.6.2
Build ID: 4.3.6.2-7.fc21

Should I reset the LO profile ?
Comment 15 Robert Großkopf 2015-04-10 17:48:58 UTC
(In reply to Luzius Auer from comment #14)
> (In reply to robert from comment #13)
> > (In reply to Luzius Auer from comment #12)
> > Have tested with Version: 4.3.6.2
> > Build-ID: d50a87b2e514536ed401c18000dad4660b6a169e
> > OpenSUSE 13.2 64bit rpm. Could not confirm view isn't editable.
> > 
> > Don't know where you get a build with such a short number. Is it a original
> > build of LO?
> 
> Yes it is the official version from the F21 repository:

And so not the original build of LO. Please use the build of LO and try to reproduce the error with this release.
You could get it from here:
http://www.libreoffice.org/download/libreoffice-still/
You could install it as a local user-installation. So you must not disturb the installation of Fedora.
You could have a look for this kind of installation here: https://wiki.documentfoundation.org/Installing_LibreOffice_on_Linux
> 
> Should I reset the LO profile ?

You could try to rename it and switch back if it doesn't work.
Comment 16 Luzius Auer 2015-04-11 17:01:19 UTC
After a silly move I trashed F21, so I had to reinstall it from scratch, update all and install LO by 'yum install libreoffice' from the standard F21 repository: now the views are editable ! You were right, but no need to install the original LO.
LO Version: 4.3.6.2
Build ID: 4.3.6.2-7.fc21

Best regards
Luzius
Comment 17 Robinson Tryon (qubit) 2015-12-17 08:25:10 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]